--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "payment-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://maxpenderuk.github.io/payment-app",
   "dependencies": {
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
     "eslint": "^4.19.1",
+    "gh-pages": "^1.2.0",
     "livr": "^2.1.0",
     "luhn": "^2.3.0",
     "react": "^16.4.0",
